marte_28mar2023/x86_arch/drivers/svga/vga.h

#define TEXT 	     0		/* Compatible with VGAlib v1.2 */
#define G640x480x16  4
#define G320x240x256 6
/*<MaRTE OS*/

extern unsigned short int rgb15(int r,int g,int b);
extern unsigned short int rgb16(int r,int g,int b);
extern unsigned int rgb24(int r,int g,int b);
extern unsigned int rgb32(int r,int g,int b);
extern unsigned int rgba(int r,int g,int b);
extern unsigned short int conversor_32_a_16(unsigned int rgb);
extern unsigned short int conversor_24_a_16(unsigned int rgb);
extern unsigned short int conversor_32_a_15(unsigned int rgb);
extern unsigned short int conversor_24_a_15(unsigned int rgb);
/*MaRTE OS>*/



/*<MaRTE OS*/
extern int init_vga_with_associated_mem(int mode,int vendor,int card);
extern int init_vga(int mode,int vendor,int card);
/*MaRTE OS>*/
extern int vga_setmode(int mode);
extern int vga_setcolor(int color);
extern int vga_drawpixel(int x, int y);
extern int vga_drawscanline(int line, unsigned char *colors);
extern int vga_getpixel(int x, int y);	/* Added. */
extern void draw_image_2(int height, int width, unsigned int *imageptr);
extern void vga_pixel(point_t point, unsigned int color);
extern void vga_line(point_t point1, point_t point2, unsigned int color);
extern void vga_rectangle(point_t point1, point_t point2, unsigned int color);
extern void vga_rectangle_fill(point_t point1, point_t point2, unsigned int color);
extern void vga_circumference(point_t centre, unsigned int radio, unsigned int color);
extern void vga_circle(point_t centre, unsigned int radio, unsigned int color);
extern void vga_text(char *text, point_t point, DWORD fg, DWORD bg);
 


extern void vga_ellipse(point_t point1, point_t point2, unsigned int color);
extern void vga_ellipse_fill(point_t point1, point_t point2, unsigned int color);
extern int vga_scroll_ver(point_t point1, point_t point2, int lines);
extern int vga_scroll_hor(point_t point1, point_t point2, int lines);
//    extern int vga_getoptmode(int x, int y, int colors, int bytesperpixel, int c);


/*MaRTE OS*/
extern void restoregray_palette(void);
extern void restorepalette_default(void);
extern void full_blue_screen(void);
#define VGA		1